2003-11-18  Shaun McCance  <shaunm@gnome.org>

	* src/Makefile.am:
	- Add yelp-toc-pager.[ch] to test-pager build.

	* src/yelp-toc-pager.c:
	- Make the hashing of OMF files work completely.

2003-11-18  Shaun McCance  <shaunm@gnome.org>

	* src/Makefile.am:
	* src/yelp-reader.c:
	* src/yelp-reader.h:
	- Removing YelpReader

2003-11-18  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-toc-pager.c:
	- Only read files ending in .omf

2003-11-18  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-db-pager.c:
	- Pass $mediaobject_path as a param

2003-11-18  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-db-pager.c:
	* src/yelp-pager.c:
	* src/yelp-pager.h:
	- Implement pausing of the TocPager.
	- Add default handlers for error, cancel, and finish.

	* src/yelp-toc-pager.c:
	* src/yelp-toc-pager.h:
	- Implement pausing of the TocPager.
	- More work on reading OMF files.

	* src/yelp-window.c:
	- Implement pausing of the TocPager.

2003-11-17  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-toc-pager.c:
	- More work on the TOC pager.

2003-11-16  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-db-pager.c:
	- Make the titles for sidebars actually work.  That was stupid.

	* src/yelp-window.c:
	- Make the titles for sidebars actually work.
	- Keep a reference to the scrolling areas, so I can reparent.

2003-11-16  Shaun McCance  <shaunm@gnome.org>

	* src/Makefile.am:
	* src/yelp-base.c:
	* src/yelp-toc-pager.c:
	* src/yelp-toc-pager.h:
	- Adding YelpTocPager

	* src/yelp-db-pager.c:
	* src/yelp-db-pager.h:
	- Whitespace changes

2003-11-15  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-db-pager.c:
	* src/yelp-pager.c:
	* src/yelp-pager.h:
	- Change resolve_uri to return a non-const gchar *
	- Remove sections event, as it's not necessary using the
	  GtkTreeModel without all that threading crap.

	* src/yelp-db-pager.c:
	- Remove sections event.

2003-11-15  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-db-pager.c:
	* src/yelp-pager.c:
	* src/yelp-pager.h: