@@ -1,3 +1,9 @@
+2003-11-19  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-toc-pager.c:
+	- Prepare to work around seriesid madness.
+	- Prepare to read the actual toc file in.
+
 2003-11-18  Shaun McCance  <shaunm@gnome.org>
 
 	* src/Makefile.am:
